@@ -2,6 +2,7 @@
 * NHibernate.Envers now targets .net framework 4.0
 * IAuditProjection.GetData now returns Tuple<string, string, Boolean>
 * ICrossTypeRevisionChangesReader.FindEntityTypes now returns ISet<Tuple<string, System.Type>>
+* Non generic sets no longer part of ICollectionMapperFactory because NH Core no longer supports it.
 
 
 === vNext ===
